user and auth middleware - potentially buggy
